--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,49 @@
-node_modules/
-uploads/
+# Dependencies
+/node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Environment
 .env
-*.log
+.env.local
+.env.*.local
+
+# Debug
 debug-screenshot.png
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Directory for uploaded files
+/uploads
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Mac OS
+.DS_Store
+
+# Windows
+Thumbs.db 
